--- a/cocina.html
+++ b/cocina.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa</title>
+    <title>Casa jeje</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
